feat: add better catch to show the username of the one's that put the song + updated dependencies