@@ -1,6 +1,5 @@
 package com.vaatu.bots.dixtro.embed;
 
-import com.sedmelluq.discord.lavaplayer.track.AudioTrack;
 import com.sedmelluq.discord.lavaplayer.track.AudioTrackInfo;
 import net.dv8tion.jda.api.EmbedBuilder;
 import net.dv8tion.jda.api.entities.MessageEmbed;
@@ -25,11 +24,15 @@ public class EmbedFactory {
     }
 
     public static MessageEmbed createSongEmbed(AudioTrackInfo trackInfo) {
+        return createSongEmbed(trackInfo, "Unknown");
+    }
+
+    public static MessageEmbed createSongEmbed(AudioTrackInfo trackInfo, String addedBy) {
         EmbedBuilder newEmbed = new EmbedBuilder();
         newEmbed.setTitle("💿 " + trackInfo.title);
         newEmbed.setAuthor("🖋️ Author: " + trackInfo.author);
         newEmbed.addField("🎵 Video Length:", getVideoLength(trackInfo.length), false);
-        newEmbed.addField("By:", "", true);
+        newEmbed.addField("Added by:", addedBy, true);
         newEmbed.setImage(trackInfo.artworkUrl);
         newEmbed.setColor(Color.ORANGE);
         return newEmbed.build();
@@ -50,20 +53,23 @@ public class EmbedFactory {
         return newEmbed.build();
     }
 
-    public static MessageEmbed createQueueEmbed(List<AudioTrack> tracks) {
+    public static MessageEmbed createQueueEmbed(List<com.vaatu.bots.dixtro.audio.QueuedTrack> tracks) {
         EmbedBuilder newEmbed = new EmbedBuilder();
         newEmbed.setColor(Color.ORANGE);
         newEmbed.setTitle("Tracks queue");
         newEmbed.setFooter("Queue size: " + tracks.size() + " songs.");
         tracks = tracks.size() >= 5 ? tracks.subList(0, 4) : tracks;
 
-        AudioTrackInfo actualTrackInfo = tracks.removeFirst().getInfo();
-        newEmbed.addField("⏸️ " + actualTrackInfo.author, actualTrackInfo.title, false);
+        // First entry is treated as currently playing or top of queue
+        com.vaatu.bots.dixtro.audio.QueuedTrack actual = tracks.remove(0);
+        AudioTrackInfo actualTrackInfo = actual.getTrack().getInfo();
+        newEmbed.addField("⏸️ " + actualTrackInfo.author, actualTrackInfo.title + " — added by: " + actual.getAddedBy(),
+                false);
 
-        for (AudioTrack track : tracks) {
-            AudioTrackInfo trackInfo = track.getInfo();
+        for (com.vaatu.bots.dixtro.audio.QueuedTrack q : tracks) {
+            AudioTrackInfo trackInfo = q.getTrack().getInfo();
             String trackTitle = shortenTrackTitle(trackInfo.title);
-            newEmbed.addField("▶️ Author: " + trackInfo.author, trackTitle, false);
+            newEmbed.addField("▶️ Author: " + trackInfo.author, trackTitle + " — added by: " + q.getAddedBy(), false);
         }
 
         return newEmbed.build();
